--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.04;
+  letter-spacing: 0.04em;
   color: #ffffff;
   background-color: #4d5ae5;
   text-align: center;
@@ -96,7 +96,7 @@ body {
 .section-title {
   font-size: 36px;
   line-height: 1.11;
-  letter-spacing: 2%;
+  letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
